@@ -661,7 +661,7 @@ class CExpressionVisitorWithPointerAliasing
                 dummy,
                 returnType,
                 new CIdExpression(dummy, functionDecl),
-                Collections.singletonList(parameters.get(0)),
+                Collections.singletonList(parameters.getFirst()),
                 functionDecl);
 
         BooleanFormula form = null;
@@ -684,7 +684,7 @@ class CExpressionVisitorWithPointerAliasing
           final int maxIndex = conv.options.maxPreciseStrFunctionSize();
           List<CExpression> parameters = e.getParameterExpressions();
           verify(parameters.size() == 1);
-          CExpression parameter = parameters.get(0);
+          CExpression parameter = parameters.getFirst();
           final CType returnType = e.getExpressionType();
 
           Formula f = conv.makeNondet(functionName, returnType, ssa, constraints);
@@ -739,7 +739,7 @@ class CExpressionVisitorWithPointerAliasing
       if (BuiltinOverflowFunctions.isBuiltinOverflowFunction(functionName)) {
         List<CExpression> parameters = e.getParameterExpressions();
         verify(parameters.size() == 3);
-        CExpression var1 = parameters.get(0);
+        CExpression var1 = parameters.getFirst();
         CExpression var2 = parameters.get(1);
         CExpression var3 = parameters.get(2);
         Expression overflows =
@@ -788,7 +788,7 @@ class CExpressionVisitorWithPointerAliasing
       throws UnrecognizedCodeException {
     final List<CExpression> parameters = e.getParameterExpressions();
     verify(parameters.size() == 2 || parameters.size() == 3);
-    final CExpression s1 = parameters.get(0);
+    final CExpression s1 = parameters.getFirst();
     final CExpression s2 = parameters.get(1);
     final CSimpleType returnType = (CSimpleType) e.getExpressionType().getCanonicalType();
 
