@@ -33,6 +33,7 @@ import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.SequencedMap;
 import java.util.Set;
 import java.util.logging.Level;
 import org.sosy_lab.common.io.IO;
@@ -60,7 +61,7 @@ public class InterpolationTree<S extends AbstractState, I extends Interpolant<S,
   private int interpolationCounter = 0;
 
   /** the predecessor relation of the states contained in this tree */
-  private final Map<ARGState, ARGState> predecessorRelation = new LinkedHashMap<>();
+  private final SequencedMap<ARGState, ARGState> predecessorRelation = new LinkedHashMap<>();
 
   /** the successor relation of the states contained in this tree */
   private final ListMultimap<ARGState, ARGState> successorRelation = LinkedListMultimap.create();
@@ -71,7 +72,7 @@ public class InterpolationTree<S extends AbstractState, I extends Interpolant<S,
    * <p>this has to be a linked hash map, because the ImpactRefiner has to iterate over this in
    * insertion-order
    */
-  private final Map<ARGState, I> interpolants = new LinkedHashMap<>();
+  private final SequencedMap<ARGState, I> interpolants = new LinkedHashMap<>();
 
   /** the root of the tree */
   private final ARGState root;
@@ -140,7 +141,7 @@ public class InterpolationTree<S extends AbstractState, I extends Interpolant<S,
       successorRelation.put(predecessorState, successorState);
     }
 
-    return states.get(0);
+    return states.getFirst();
   }
 
   /** This method builds an actual tree from multiple path. */
@@ -155,7 +156,7 @@ public class InterpolationTree<S extends AbstractState, I extends Interpolant<S,
       if (currentState.getParents().iterator().hasNext()) {
 
         if (!predecessorRelation.containsKey(currentState)) {
-          ARGState parentState = currentState.getParents().iterator().next();
+          ARGState parentState = currentState.getParents().getFirst();
 
           predecessorRelation.put(currentState, parentState);
           successorRelation.put(parentState, currentState);
@@ -301,7 +302,7 @@ public class InterpolationTree<S extends AbstractState, I extends Interpolant<S,
   public ImmutableSet<ARGState> obtainRefinementRoots(GenericRefiner.RestartStrategy pStrategy) {
     if (pStrategy == GenericRefiner.RestartStrategy.ROOT) {
       assert successorRelation.get(root).size() == 1 : "ARG root has more than one successor";
-      return ImmutableSet.of(successorRelation.get(root).iterator().next());
+      return ImmutableSet.of(successorRelation.get(root).getFirst());
     }
 
     ARGState commonRoot = null;
@@ -554,7 +555,7 @@ public class InterpolationTree<S extends AbstractState, I extends Interpolant<S,
 
     @Override
     public ARGPath getNextPathForInterpolation() {
-      ARGState current = sources.remove(0);
+      ARGState current = sources.removeFirst();
 
       assert current.isTarget() : "current element is not a target";
 
